@@ -1147,6 +1147,62 @@ SCIP_DECL_DIALOGEXEC(SCIPdialogExecDisplaySolution)
    return SCIP_OKAY;
 }
 
+/** dialog execution method for the display of solutions in the pool command */
+SCIP_DECL_DIALOGEXEC(SCIPdialogExecDisplaySolutionPool)
+{  /*lint --e{715}*/
+   char prompt[SCIP_MAXSTRLEN];
+   SCIP_Bool endoffile;
+   SCIP_SOL** sols;
+   char* idxstr;
+   char* endstr;
+   int nsols;
+   int idx;
+
+   SCIP_CALL( SCIPdialoghdlrAddHistory(dialoghdlr, dialog, NULL, FALSE) );
+   *nextdialog = SCIPdialoghdlrGetRoot(dialoghdlr);
+   SCIPdialogMessage(scip, NULL, "\n");
+
+   if ( SCIPgetStage(scip) < SCIP_STAGE_PROBLEM )
+   {
+      SCIPdialogMessage(scip, NULL, "No solution available.\n\n");
+      return SCIP_OKAY;
+   }
+
+   nsols = SCIPgetNSols(scip);
+   if ( nsols == 0 )
+   {
+      SCIPdialogMessage(scip, NULL, "No solution available.\n\n");
+      return SCIP_OKAY;
+   }
+
+   /* parse solution number */
+   (void) SCIPsnprintf(prompt, SCIP_MAXSTRLEN-1, "index of solution [0-%d]: ", nsols-1);
+
+   SCIP_CALL( SCIPdialoghdlrGetWord(dialoghdlr, dialog, prompt, &idxstr, &endoffile) );
+
+   if( endoffile )
+   {
+      *nextdialog = NULL;
+      return SCIP_OKAY;
+   }
+
+   if ( SCIPstrToIntValue(idxstr, &idx, &endstr) )
+   {
+      if ( idx < 0 || idx >= nsols )
+      {
+         SCIPdialogMessage(scip, NULL, "Solution index out of bounds [0-%d].\n", nsols-1);
+         return SCIP_OKAY;
+      }
+
+      sols = SCIPgetSols(scip);
+      assert( sols[idx] != NULL );
+      SCIP_CALL( SCIPprintSol(scip, sols[idx], NULL, FALSE) );
+   }
+   SCIPdialogMessage(scip, NULL, "\n");
+
+   return SCIP_OKAY;
+}
+
 /** dialog execution method for the display statistics command */
 SCIP_DECL_DIALOGEXEC(SCIPdialogExecDisplayStatistics)
 {  /*lint --e{715}*/
@@ -3058,6 +3114,17 @@ SCIP_RETCODE SCIPincludeDialogDefault(
             NULL,
             SCIPdialogExecDisplaySolution, NULL, NULL,
             "solution", "display best primal solution", FALSE, NULL) );
+      SCIP_CALL( SCIPaddDialogEntry(scip, submenu, dialog) );
+      SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
+   }
+
+   /* display solution */
+   if( !SCIPdialogHasEntry(submenu, "sols") )
+   {
+      SCIP_CALL( SCIPincludeDialog(scip, &dialog,
+            NULL,
+            SCIPdialogExecDisplaySolutionPool, NULL, NULL,
+            "sols", "display solutions from pool", FALSE, NULL) );
       SCIP_CALL( SCIPaddDialogEntry(scip, submenu, dialog) );
       SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
    }
